fixed overflow with word-wrap: break-word; or something like that

--- a/style.css
+++ b/style.css
@@ -171,3 +171,10 @@ p.lead {
 .navbar {
   border-radius: 0px;
 }
+
+
+.ChatMessage {
+  word-wrap: break-word;
+
+
+}
